# rust-server

./: Cargo.toml
src/: main.rs
src/instructions/: balance.rs  createtoken.rs  generatekeypair.rs  message.rs  mint.rs  mod.rs  sendtokens.rs  token.rs  transfer.rs
src/model/: response.rs  transaction.rs
