[package]
name = "solana-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = "1.0.219"
serde_json = "1.0.140"

tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.98"
tower-http = { version = "0.6.6", features = ["full"] }
bs58 = "0.5.1"
base58 = "0.2.0"
spl-token = "8.0.0"
base64 = "0.22.1"
solana-program = "2.3.0"
spl-associated-token-account = "7.0.0"
solana-sdk = "2.3.1"
solana-client = "2.3.2"
ed25519-dalek = "2.1.1"
